<resources>
    <string name="app_name">DetailFlowTest</string>
    <string name="msg_settings_about">About</string>
    <string name="m_settings_about_serial_number">Serial number</string>
    <string name="msg_settings_firmware_upadte">Firmware update</string>
    <string name="msg_authorization_enter">Enter password</string>
    <string name="button_authorization_enter">Enter</string>
    <string name="msg_authorization_hint_password">Password</string>
    <string name="msg_authorization_incorrect">Incorrect password</string>
    <string name="msg_authorization_change_password">Change password</string>
    <string name="msg_authorization_hint_new_password">New password</string>
    <string name="button_authorization_change">Change</string>
    <string name="msg_authorization_hint_confirm_password">Confirm password</string>
    <string name="msg_authorization_hint_current_password">Current password</string>
    <string name="msg_authorization_confirm_incorrect">Password confirmation is incorrect</string>
    <string name="msg_authorization_password_empty">Password must not be empty</string>
    <string name="msg_authorization_password_change_successfully">Password changed successfully</string>
    <string name="msg_firmware_select">Select</string>
    <string name="msg_firmware_file">File</string>
    <string name="button_firmware_update">Update</string>
    <string name="msg_firmware_update_process">Updating the firmware</string>
</resources>